AM_CFLAGS  = -I$(top_srcdir)/src/ @GTK_CFLAGS@ -g -Wall -Wextra -Wpedantic
AM_LDFLAGS = -L$(top_builddir)/src/.libs -lvfd -lvutils -lvgtk

check_PROGRAMS = construct_fcalls1 \
		 construct_fcalls2 \
		 construct_fcalls3 \
		 construct_fcalls4 \
		 construct_fcalls5 \
		 construct_fcalls6 \
		 construct_fcalls7 \
		 construct_fcalls8 \
		 construct_fcalls9

construct_fcalls1_SOURCES = $(srcdir)/construct_fcalls1.c
construct_fcalls1_CFLAGS  = $(AM_CFLAGS)
construct_fcalls1_LDFLAGS = $(AM_LDFLAGS)

construct_fcalls2_SOURCES = $(srcdir)/construct_fcalls2.c
construct_fcalls2_CFLAGS  = $(AM_CFLAGS)
construct_fcalls2_LDFLAGS = $(AM_LDFLAGS)

construct_fcalls3_SOURCES = $(srcdir)/construct_fcalls3.c
construct_fcalls3_CFLAGS  = $(AM_CFLAGS)
construct_fcalls3_LDFLAGS = $(AM_LDFLAGS)

construct_fcalls4_SOURCES = $(srcdir)/construct_fcalls4.c
construct_fcalls4_CFLAGS  = $(AM_CFLAGS)
construct_fcalls4_LDFLAGS = $(AM_LDFLAGS)

construct_fcalls5_SOURCES = $(srcdir)/construct_fcalls5.c
construct_fcalls5_CFLAGS  = $(AM_CFLAGS)
construct_fcalls5_LDFLAGS = $(AM_LDFLAGS)

construct_fcalls6_SOURCES = $(srcdir)/construct_fcalls6.c
construct_fcalls6_CFLAGS  = $(AM_CFLAGS)
construct_fcalls6_LDFLAGS = $(AM_LDFLAGS)

construct_fcalls7_SOURCES = $(srcdir)/construct_fcalls7.c
construct_fcalls7_CFLAGS  = $(AM_CFLAGS)
construct_fcalls7_LDFLAGS = $(AM_LDFLAGS)

construct_fcalls8_SOURCES = $(srcdir)/construct_fcalls8.c
construct_fcalls8_CFLAGS  = $(AM_CFLAGS)
construct_fcalls8_LDFLAGS = $(AM_LDFLAGS)

construct_fcalls9_SOURCES = $(srcdir)/construct_fcalls9.c
construct_fcalls9_CFLAGS  = $(AM_CFLAGS)
construct_fcalls9_LDFLAGS = $(AM_LDFLAGS)

