noinst_LTLIBRARIES =
bin_PROGRAMS = vflogviewer

vflogviewer_SOURCES = vflogviewer.c
vflogviewer_CPPFLAGS = ${external_includes}
vflogviewer_CFLAGS = @NCURSES_CFLAGS@ -g -Wall -Wextra -Wpedantic
vflogviewer_LDFLAGS = @NCURSES_LIBS@ -rdynamic -lm
vflogviewer_LDADD =
# external libraries
vflogviewer_LDADD += 
